--- a/Manuscript/CoverLetter/YGWM_cover.tex
+++ b/Manuscript/CoverLetter/YGWM_cover.tex
@@ -18,7 +18,7 @@
     6-9 Carlton House Terrace\\
     London England SW1Y 5AG\\ \\
     \vspace{1mm}
-    \centerline{\bf{Re: The eco-evolutionary impacts of collective straying on metapopulation robustness}} \\
+    \centerline{\bf{Re: Eco-evolutionary dynamics and collective migration: implications for salmon metapopulation robustness}} \\
 }
 
 
@@ -27,7 +27,7 @@
 
 
 %Intro
-Please find attached our manuscript entitled ``The eco-evolutionary impacts of collective straying on metapopulation robustness'' co-authored by Justin Yeakel, Jean Philippe Gibert, Peter Westley, and Jonathan Moore, which we would like to submit for publication in the Philosophical Transactions of the Royal Society B themed issue \emph{Collective movement in ecology: From emerging technologies to management implications}, under the section title `Linking collective movement with populations, ecology and evolution'.
+Please find attached our manuscript entitled ``Eco-evolutionary dynamics and collective migration: implications for salmon metapopulation robustness'' co-authored by Justin Yeakel, Jean Philippe Gibert, Peter Westley, and Jonathan Moore, which we would like to submit for publication in the Philosophical Transactions of the Royal Society B themed issue \emph{Collective movement in ecology: From emerging technologies to management implications}, under the section title `Linking collective movement with populations, ecology and evolution'.
 
 
 A longstanding question in ecology and evolutionary biology concerns how selective gradients and dispersal influences the robustness and persistence of spatially connected metapopulations.
@@ -45,13 +45,13 @@ We make several specific contributions:
   The trait means of both populations are skewed towards that of the dominant population, and this has a large effect on the resultant dynamics.
   \item There is a nonlinear effect of straying rates (either constant or density dependent) on both the portfolio effect and the recovery time: portfolio effects are generally maximized and recovery rates are generally minimized with a low-intermediate rate of straying -- particularly in the alternative steady state regime -- and this promotes robustness.
   % \item We show that the portfolio effect and recovery time following a large disturbance, two independent measures of robustness that concern steady state and transient dynamics, respectively, are strongly correlated.
-  \item Increased habitat heterogeneity tends to increase robustness when rates of straying are low, but decrease robustness when rates are straying become large. Importantly, metapopulation robustness is generally increased by density dependent straying, regardless of habitat heterogeneity.
-  \item If highly dissimilar habitats are linked by a very low rate of straying (as might be expected if two sites are very distant from one another), we find that the extinction of the dominant population 
+  \item Increased habitat heterogeneity tends to increase robustness when rates of straying are low, but decrease robustness when rates are straying are high. 
+  \item A key result of our analysis is that density dependent straying generally increases metapopulation robustness.
 \end{itemize}
 
 
-Our theory is general, relatively simple, and synthesizes a variety of fundamental ecological and evolutionary theories to show that our results are the natural consequence of a simple dynamical framework that incorporates the dispersal and local selection. 
-We believe that our findings will be of general interest to ecologists, freshwater biologists, and evolutionary biologists, such that consideration for publication in a broad interest journal such as \emph{Philosophical Transactions} is warranted.
+Our theory is general, relatively simple, and synthesizes a variety of fundamental ecological and evolutionary theories to show that our results are the natural consequence of a simple dynamical framework that incorporates the dispersal of individuals between sites and local selection for a trait complex that determines productivity. 
+We believe that our findings will be of general interest to ecologists, freshwater biologists, and evolutionary biologists, such that consideration for publication in \emph{Philosophical Transactions} is warranted.
 
 We appreciate your consideration of our manuscript.
 
