--- a/Manuscript/aa_kevin.bib
+++ b/Manuscript/aa_kevin.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Thu, 01 Jun 2017.
+%% Created using Papers on Fri, 02 Jun 2017.
 %% http://papersapp.com/papers/
 
 @article{Anonymous:2015gf,
@@ -77,8 +77,8 @@ month = mar
 
 @article{Ford:2002ip,
 author = {Ford, Michael J},
-title = {{Selection in Captivity during Supportive Breeding May Reduce Fitness in the Wild}},
-journal = {Conservation Biology},
+title = {{Selection in captivity during supportive breeding may reduce fitness in the wild}},
+journal = {Conserv Biol},
 year = {2002},
 volume = {16},
 number = {3},
@@ -110,7 +110,7 @@ pages = {362--371}
 @article{Anderson:2013bf,
 author = {Anderson, Joseph H and Faulds, Paul L and Atlas, William I and Quinn, Thomas P},
 title = {{Reproductive success of captively bred and naturally spawned Chinook salmon colonizing newly accessible habitat}},
-journal = {Evolutionary Applications},
+journal = {Evol Appl},
 year = {2013},
 volume = {6},
 number = {2},
@@ -160,7 +160,7 @@ month = sep
 @article{Secor:2009ena,
 author = {Secor, David H and Kerr, Lisa A and Cadrin, Steven X},
 title = {{Connectivity effects on productivity, stability, and persistence in a herring metapopulation model}},
-journal = {ICES Journal of Marine Science},
+journal = {ICES J Mar Sci},
 year = {2009},
 volume = {66},
 number = {8},
@@ -189,7 +189,7 @@ month = jul
 @article{Fisher:1994wl,
 author = {Fisher, F W},
 title = {{Past and Present Status of Central Valley Chinook Salmon}},
-journal = {Conservation Biology},
+journal = {Conserv Biol},
 year = {1994},
 volume = {8},
 number = {3},
@@ -199,7 +199,7 @@ month = sep
 
 @article{Radchenko:2007tc,
 author = {Radchenko, Vladimir I and Temnykh, Olga S and Lapko, Viktor V},
-title = {{Trends in abundance and biological characteristics of pink salmon ({\it Oncorhynchus gorbuscha}) in the North Pacific Ocean}},
+title = {{Trends in abundance and biological characteristics of pink salmon (\emph{Oncorhynchus gorbuscha}) in the North Pacific Ocean}},
 journal = {North Pacific Anadromous Fish Commission Bulletin},
 year = {2007},
 volume = {4},
@@ -220,7 +220,7 @@ pages = {971--981}
 author = {Gibert, Jean P and Dell, Anthony I and DeLong, John P and Pawar, Samraat},
 title = {{Scaling-up trait variation from individuals to ecosystems 
 }},
-journal = {Advances in Ecological Research},
+journal = {Adv Ecol Res},
 year = {2015},
 volume = {52},
 pages = {1--17}
@@ -228,7 +228,7 @@ pages = {1--17}
 
 @article{Kuehn:2010p2591,
 author = {Kuehn, Christian},
-title = {{A mathematical framework for critical transitions: Bifurcations, fast-slow systems and stochastic dynamics}},
+title = {{A mathematical framework for critical transitions: bifurcations, fast-slow systems and stochastic dynamics}},
 journal = {Physica D},
 year = {2011},
 volume = {240},
@@ -247,8 +247,8 @@ pages = {219--247}
 
 @article{Candy:2000hu,
 author = {Candy, John R and Beacham, Terry D},
-title = {{Patterns of homing and straying in southern British Columbia coded-wire tagged chinook salmon (Oncorhynchus tshawytscha) populations}},
-journal = {Fisheries Research},
+title = {{Patterns of homing and straying in southern British Columbia coded-wire tagged Chinook salmon (\emph{Oncorhynchus tshawytscha}) populations}},
+journal = {Fish Res},
 year = {2000},
 volume = {47},
 number = {1},
@@ -280,7 +280,7 @@ month = apr
 
 @article{Boughton:1999fa,
 author = {Boughton, David A},
-title = {{EMPIRICAL EVIDENCE FOR COMPLEX SOURCE{\textendash}SINK DYNAMICS WITH ALTERNATIVE STATES IN A BUTTERFLY METAPOPULATION}},
+title = {{Empirical evidence for complex source{\textendash}sink dynamics with alternative states in a butterfly metapopulation}},
 journal = {Ecology},
 year = {1999},
 volume = {80},
@@ -356,12 +356,12 @@ month = jul
 
 @article{Lande:1976ga,
 author = {Lande, Russell},
-title = {{Natural Selection and Random Genetic Drift in Phenotypic Evolution}},
+title = {{Natural selection and random genetic drift in phenotypic evolution}},
 journal = {Evolution},
 year = {1976},
 volume = {30},
 number = {2},
-pages = {314},
+pages = {314--334},
 month = jun
 }
 
@@ -411,9 +411,10 @@ month = sep
 
 @book{simpson1953major,
 author = {Simpson, G G},
-title = {{The major features of evolution}},
+title = {{The Major Features of Evolution}},
 publisher = {Simon and Schuster},
-year = {1953}
+year = {1953},
+address = {New York}
 }
 
 @article{Shelton:2010ur,
@@ -428,20 +429,19 @@ pages = {302--315}
 
 @article{Liermann:2017gj,
 author = {Liermann, Martin and PESS, GEORGE and McHenry, Mike and McMillan, John and Elofson, Mel and Bennett, Todd and Moses, Raymond},
-title = {{Relocation and Recolonization of Coho Salmon Oncorhynchus kisutch in Two Tributaries to the Elwha River: Implications for Management and Monitoring}},
-journal = {Transactions of the American Fisheries Society},
+title = {{Relocation and recolonization of Coho salmon \emph{Oncorhynchus kisutch} in two tributaries to the elwha river: Implications for management and monitoring}},
+journal = {T Am Fish Soc},
 year = {2017},
 volume = {17},
-pages = {525},
+pages = {1--39},
 month = apr
 }
 
 @book{Jonsson:2011kg,
 author = {Jonsson, Bror and Jonsson, Nina},
 title = {{Ecology of Atlantic Salmon and Brown Trout}},
-publisher = {Springer Science {\&} Business Media},
+publisher = {Springer Netherlands},
 year = {2011},
-series = {Habitat as a template for life histories},
 address = {Dordrecht},
 month = may
 }
@@ -503,13 +503,14 @@ author = {Hanski, Ilkka},
 title = {{Metapopulation Ecology}},
 publisher = {Oxford University Press},
 year = {1999},
+address = {Oxford},
 month = mar
 }
 
 @article{Pess:2014isa,
 author = {Pess, G R and Quinn, T P and Gephard, S R and Saunders, R},
 title = {{Re-colonization of Atlantic and Pacific rivers by anadromous fishes: linkages between life history and the benefits of barrier removal}},
-journal = {Reviews in Fish Biology and Fisheries},
+journal = {Rev Fish Biol Fisher},
 year = {2014},
 volume = {24},
 number = {3},
@@ -531,7 +532,7 @@ month = sep
 @article{Waples:2008kp,
 author = {Waples, Robin S and Pess, George R and Beechie, Tim},
 title = {{Evolutionary history of Pacific salmon in dynamic environments}},
-journal = {Evolutionary Applications},
+journal = {Evol Appl},
 year = {2008},
 volume = {1},
 number = {2},
@@ -595,7 +596,7 @@ month = mar
 
 @article{Bett:2017ha,
 author = {Bett, Nolan N and Hinch, Scott G and Burnett, Nicholas J and Donaldson, Michael R and Naman, Sean M},
-title = {{Causes and Consequences of Straying into Small Populations of Pacific Salmon}},
+title = {{Causes and consequences of straying into small populations of Pacific salmon}},
 journal = {Fisheries},
 year = {2017},
 volume = {42},
@@ -617,8 +618,8 @@ month = may
 
 @article{Bond:2016dz,
 author = {Bond, Morgan H and Westley, Peter A H and Dittman, Andrew H and Holecek, Dean and Marsh, Tiffani and Quinn, Thomas P},
-title = {{Combined effects of barge transportation, river environment, and rearing location on straying and migration of adult snake river fall-run chinook salmon}},
-journal = {Transactions of the American Fisheries Society},
+title = {{Combined effects of barge transportation, river environment, and rearing location on straying and migration of adult snake river fall-run Chinook salmon}},
+journal = {T Am Fish Soc},
 year = {2016},
 volume = {146},
 number = {1},
@@ -693,7 +694,7 @@ month = sep
 @article{Keefer:2014gg,
 author = {Keefer, Matthew L and Caudill, Christopher C},
 title = {{Homing and straying by anadromous salmonids: a review of mechanisms and rates}},
-journal = {Reviews in Fish Biology and Fisheries},
+journal = {Rev Fish Biol Fisher},
 year = {2014},
 volume = {24},
 number = {1},
@@ -734,7 +735,7 @@ month = jul
 
 @article{Smith:2001uc,
 author = {Smith, C T and Nelson, R J and Wood, C C and Koop, B F},
-title = {{Glacial biogeography of North American coho salmon ({\it Oncorhynchus kisutch}).}},
+title = {{Glacial biogeography of North American Coho salmon (\emph{Oncorhynchus kisutch}).}},
 journal = {Mol. Ecol.},
 year = {2001},
 volume = {10},
@@ -767,7 +768,7 @@ month = feb
 @article{Pess:2014is,
 author = {Pess, G R and Quinn, T P and Gephard, S R and Saunders, R},
 title = {{Re-colonization of Atlantic and Pacific rivers by anadromous fishes: linkages between life history and the benefits of barrier removal}},
-journal = {Reviews in Fish Biology and Fisheries},
+journal = {Rev Fish Biol Fisher},
 year = {2014},
 volume = {24},
 number = {3},
@@ -903,7 +904,7 @@ month = oct
 @article{Quinn:1993ge,
 author = {Quinn, Thomas P},
 title = {{A review of homing and straying of wild and hatchery-produced salmon}},
-journal = {Fisheries Research},
+journal = {Fish Res},
 year = {1993},
 volume = {18},
 number = {1-2},
@@ -936,7 +937,7 @@ month = aug
 @article{Peterson:2014gy,
 author = {Peterson, Daniel A and Hilborn, Ray and Hauser, Lorenz},
 title = {{Local adaptation limits lifetime reproductive success of dispersers in a wild salmon metapopulation}},
-journal = {Nature Communications},
+journal = {Nat Commun},
 year = {2014},
 volume = {5},
 pages = {3696},
@@ -955,7 +956,7 @@ pages = {1455}
 
 @article{Johnson:2012fe,
 author = {Johnson, Rachel C and Weber, Peter K and Wikert, John D and Workman, Michelle L and MacFarlane, R Bruce and Grove, Marty J and Schmitt, Axel K},
-title = {{Managed Metapopulations: Do Salmon Hatchery {\textquoteleft}Sources{\textquoteright} Lead to In-River {\textquoteleft}Sinks{\textquoteright} in Conservation?}},
+title = {{Managed metapopulations: do salmon hatchery {\textquoteleft}sources{\textquoteright} lead to in-river {\textquoteleft}sinks{\textquoteright} in conservation?}},
 journal = {PLoS ONE},
 year = {2012},
 volume = {7},
@@ -1108,8 +1109,8 @@ pages = {361--367}
 
 @article{Carlson:2008hl,
 author = {Carlson, Stephanie M and Seamons, Todd R},
-title = {{SYNTHESIS: A review of quantitative genetic components of fitness in salmonids: implications for adaptation to future change}},
-journal = {Evolutionary Applications},
+title = {{A review of quantitative genetic components of fitness in salmonids: implications for adaptation to future change}},
+journal = {Evol Appl},
 year = {2008},
 volume = {1},
 number = {2},
@@ -1211,7 +1212,7 @@ pages = {533--570}
 
 @article{Ovaskainen:2002il,
 author = {Ovaskainen, Otso and Hanski, Ilkka},
-title = {{Transient Dynamics in Metapopulation Response to Perturbation}},
+title = {{Transient dynamics in metapopulation response to perturbation}},
 journal = {Theor Popul Biol},
 year = {2002},
 volume = {61},
@@ -1222,7 +1223,7 @@ month = may
 
 @article{Araki:2007cm,
 author = {Araki, Hitoshi and Cooper, Becky and Blouin, Michael S},
-title = {{Genetic Effects of Captive Breeding Cause a Rapid, Cumulative Fitness Decline in the Wild}},
+title = {{Genetic effects of captive breeding cause a rapid, cumulative fitness decline in the wild}},
 journal = {Science},
 year = {2007},
 volume = {318},
@@ -1299,7 +1300,7 @@ month = oct
 @article{Brenner:2012gl,
 author = {Brenner, Richard E and Moffitt, Steve D and Grant, William S},
 title = {{Straying of hatchery salmon in Prince William Sound, Alaska}},
-journal = {Environmental Biology of Fishes},
+journal = {Environ Biol Fish},
 year = {2012},
 volume = {94},
 number = {1},
@@ -1361,7 +1362,7 @@ month = mar
 
 @article{Simons:2004jo,
 author = {Simons, A M},
-title = {{Many wrongs: the advantage of group navigation}},
+title = {{Many wrongs: The advantage of group navigation}},
 journal = {Trends Ecol. Evol.},
 year = {2004},
 volume = {19},
@@ -1529,13 +1530,13 @@ journal = {Proc. Natl. Acad. Sci. USA},
 year = {2014},
 volume = {111},
 number = {49},
-pages = {201406326--17551},
+pages = {17546--17551},
 month = nov
 }
 
 @article{Brown:1977gk,
 author = {Brown, James H and Kodric-Brown, Astrid},
-title = {{Turnover Rates in Insular Biogeography: Effect of Immigration on Extinction}},
+title = {{Turnover rates in insular biogeography: effect of immigration on extinction}},
 journal = {Ecology},
 year = {1977},
 volume = {58},
@@ -1579,7 +1580,7 @@ pages = {195--204}
 @article{Tattam:2015gs,
 author = {Tattam, Ian A and Ruzycki, James R and McCormick, Josh L and Carmichael, Richard W},
 title = {{Length and Condition of Wild Chinook Salmon Smolts Influence Age at Maturity}},
-journal = {Transactions of the American Fisheries Society},
+journal = {T Am Fish Soc},
 year = {2015},
 volume = {144},
 number = {6},
@@ -1590,7 +1591,7 @@ month = oct
 @article{Satterthwaite:2012em,
 author = {Satterthwaite, William H and Hayes, Sean A and Merz, Joseph E and Sogard, Susan M and Frechette, Danielle M and Mangel, Marc},
 title = {{State-Dependent Migration Timing and Use of Multiple Habitat Types in Anadromous Salmonids}},
-journal = {Transactions of the American Fisheries Society},
+journal = {T Am Fish Soc},
 year = {2012},
 volume = {141},
 number = {3},
@@ -1601,7 +1602,7 @@ month = may
 @article{Gibert:2015kc,
 author = {Gibert, Jean P and DeLong, John P},
 title = {{Individual variation decreases interference competition but increases species persistence}},
-journal = {Advances in Ecological Research},
+journal = {Adv Ecol Res},
 year = {2015},
 volume = {52},
 pages = {45--64}
@@ -1609,7 +1610,7 @@ pages = {45--64}
 
 @article{Loreau:2008ju,
 author = {Loreau, Michel and de Mazancourt, Claire},
-title = {{Species Synchrony and Its Drivers: Neutral and Nonneutral Community Dynamics in Fluctuating Environments}},
+title = {{Species synchrony and its drivers: neutral and nonneutral community dynamics in fluctuating environments}},
 journal = {Am. Nat.},
 year = {2008},
 volume = {172},
@@ -1653,7 +1654,7 @@ month = apr
 @article{Christie:2012bj,
 author = {Christie, Mark R and Marine, Melanie L and French, Rod A and Blouin, Michael S},
 title = {{Genetic adaptation to captivity can occur in a single generation.}},
-journal = {PNAS},
+journal = {Proc. Natl. Acad. Sci. USA},
 year = {2012},
 volume = {109},
 number = {1},
@@ -1668,13 +1669,13 @@ journal = {Proc. Roy. Soc. B},
 year = {2014},
 volume = {281},
 number = {1784},
-pages = {20133221--20133221},
+pages = {20133221},
 month = apr
 }
 
 @article{Bell:2011ki,
 author = {Bell, Graham and Gonzalez, Andrew},
-title = {{Adaptation and Evolutionary Rescue in Metapopulations Experiencing Environmental Deterioration}},
+title = {{Adaptation and evolutionary rescue in metapopulations experiencing environmental deterioration}},
 journal = {Science},
 year = {2011},
 volume = {332},
@@ -1685,8 +1686,8 @@ month = jun
 
 @article{Fullerton:2011ii,
 author = {Fullerton, Aimee H and Lindley, Steven T and Pess, George R and Feist, Blake E and Steel, E Ashley and Mcelhany, Paul},
-title = {{Human Influence on the Spatial Structure of Threatened Pacific Salmon Metapopulations}},
-journal = {Conservation Biology},
+title = {{Human influence on the spatial structure of threatened Pacific salmon metapopulations}},
+journal = {Conserv Biol},
 year = {2011},
 volume = {25},
 number = {5},
@@ -1717,7 +1718,7 @@ pages = {1035--1046}
 
 @article{Levin:1992p1472,
 author = {Levin, Simon A},
-title = {{The Problem of Pattern and Scale in Ecology: The Robert H. MacArthur Award Lecture}},
+title = {{The problem of pattern and scale in ecology}},
 journal = {Ecology},
 year = {1992},
 volume = {73},
@@ -1728,7 +1729,7 @@ month = dec
 
 @article{Jasper:2013cc,
 author = {Jasper, James R and Habicht, Christopher and Moffitt, Steve and Brenner, Rich and Marsh, Jennifer and Lewis, Bert and Fox, Elisabeth Creelman and Grauvogel, Zac and Olive, Serena D Rogers and Grant, W Stewart},
-title = {{Source-Sink Estimates of Genetic Introgression Show Influence of Hatchery Strays on Wild Chum Salmon Populations in Prince William Sound, Alaska}},
+title = {{Source-sink estimates of genetic introgression show influence of hatchery strays on wild chum salmon populations in Prince William Sound, Alaska}},
 journal = {PLoS ONE},
 year = {2013},
 volume = {8},
@@ -1840,7 +1841,7 @@ author = {Milner-Gulland, E J and Fryxell, John M and Sinclair, Anthony R E},
 title = {{Animal Migration}},
 publisher = {Oxford University Press},
 year = {2011},
-series = {A Synthesis},
+address = {Oxford},
 month = jan
 }
 
@@ -1856,6 +1857,7 @@ author = {Quinn, Thomas P},
 title = {{The Behavior and Ecology of Pacific Salmon and Trout}},
 publisher = {UBC Press},
 year = {2011},
+address = {Vancouver},
 month = nov
 }
 
@@ -1905,8 +1907,8 @@ month = apr
 
 @article{H:2013fs,
 author = {Westley, Peter A H and Quinn, T P},
-title = {{Rates of straying by hatchery-produced Pacific salmon (Oncorhynchus spp.) and steelhead (Oncorhynchus mykiss) differ among species, life history types, and {\ldots}}},
-journal = {Canadian Journal of {\ldots}},
+title = {{Rates of straying by hatchery-produced Pacific salmon (\emph{Oncorhynchus} spp.) and steelhead (\emph{Oncorhynchus mykiss}) differ among species, life history types, and populations}},
+journal = {Can. J. Fish. Aquat. Sci.},
 year = {2013},
 volume = {70},
 number = {5},
@@ -1915,7 +1917,7 @@ pages = {735--746}
 
 @article{Chilcote:2003bb,
 author = {Chilcote, Mark W},
-title = {{Relationship between natural productivity and the frequency of wild fish in mixed spawning populations of wild and hatchery steelhead ( Oncorhynchus mykiss)}},
+title = {{Relationship between natural productivity and the frequency of wild fish in mixed spawning populations of wild and hatchery steelhead (\emph{Oncorhynchus mykiss})}},
 journal = {Can. J. Fish. Aquat. Sci.},
 year = {2003},
 volume = {60},
@@ -1953,7 +1955,8 @@ title = {{The evolution of philopatry and dispersal: homing versus straying in s
 booktitle = {Evolution Illuminated},
 year = {2004},
 editor = {Hendry, Andrew P and Stearns, Stephen C},
-publisher = {Oxford University Press on Demand}
+publisher = {Oxford University Press on Demand},
+address = {Oxford}
 }
 
 @article{Pillai:2011dm,
